--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "msw:init": "msw init public/ --save",
-    "dev": "pnpm msw:init && vite",
-    "build": "pnpm msw:init && tsc && vite build",
+    "dev": "vite",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "pnpm msw:init && vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.2.0",
